--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,35 +3,37 @@
 # You can change `author1` to your shortname.
 author1:
   # Replace <...> with your own (remove the < >)
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+  name:              Jan Bláha
+  email:             jb790419@gmail.com
+  twitter: jb790419
+  facebook: https://www.facebook.com/Otevřená-radnice-671976089556606
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
-  about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
+#about:             |
+#  Lorem ipsum dolor sit amet, consectetur adipiscing elit,
+#  sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+#  Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+#
+#   Open `_data/authors.yml` to edit this text.
 
   # This photo will be used in the about section.
-  picture:
-    path:            https://placehold.it/128x128
+#  picture:
+#    path:            https://placehold.it/128x128
     # srcset is optional, but can be used to provide higher res versions for retina displays
-    srcset:
-      1x:            https://placehold.it/128x128
-      2x:            https://placehold.it/256x256
+#    srcset:
+#      1x:            https://placehold.it/128x128
+#      2x:            https://placehold.it/256x256
 
   # Social media icons in sidebar.
   # Comment/uncommet to show/hide. Rearrange to change the order in which they appear.
-  # social:
+  social:
     # twitter:         <username>
     # github:          <username>
     # download:        <url>
     # email:           <mail@domain.tld>
     # rss:             https://<url>/feed.xml
-    # facebook:        <username>
+    facebook: https://www.facebook.com/Otevřená-radnice-671976089556606
     # google:          <number>
     # vk:              <username>
     # youtube:         <string_string_string>
